--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ button[type="submit"]:hover {
     min-width: 300px;
     flex-direction: column;
     align-items: center;
-
+    border-radius: 20px;
 }
 
 h1 {
