--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ button[type="submit"]:hover {
 
 .card {
     background: linear-gradient(180deg, hsl(210, 100%, 75%), hsl(40, 100%, 75%));
-    padding: 50px;
+    padding: 20px;
     box-shadow: 2px 2px 5px hsla(0, 0%, 0%, 0.5);
     display: flex;
     width: 500px;
@@ -54,7 +54,14 @@ button[type="submit"]:hover {
 }
 
 .cardContent {
-    background-color: hsl(0, 0%, 100%);
+    background-color: hsla(0, 0%, 100%, 0.6);
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    text-align: center;
+
 }
 
 h1 {
@@ -71,8 +78,8 @@ p {
 .tempDisplay {
     font-size: 3.5rem;
     font-weight: bold;
-    color: hsla(0, 0%, 0%, 0.75);
-    margin-bottom: 25px;
+    color: hsl(0, 0%, 2%);
+    margin-bottom: 20px;
 }
 
 .humidityDisplay {
